# CeCA-Challenge

./: docker-compose.yml
backend/: .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: crud.py  db_conection.py  main.py  models.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: Form.js
lambda-function/: .env  .gitignore  package-lock.json  pyproject.toml  serverless.yml
lambda-function/app/: db_connection.py  handler.py  models.py  schemas.py
script/: .env  Dockerfile  entrypoint.sh  example_db.json  load_db.py  pyproject.toml
