[tool.poetry]
name = "lambda-function"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
redis = "^4.1.1"
mysql-connector-python = "^8.0.28"
python-dotenv = "^0.19.2"
SQLAlchemy = "^1.4.31"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
